--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "valtio-counter-example",
   "version": "1.0.0",
   "dependencies": {
+    "cross-env": "^7.0.3",
     "prismjs": "^1.23.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -13,7 +14,7 @@
     "typescript": "^4.2.3"
   },
   "scripts": {
-    "start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
+    "start": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
